tests/snapshots/scenarios__provider_auth_error.snap
---
source: tests/scenarios.rs
expression: out.events
---
[
  "Ready",
  {
    "HistoryUpdated": {
      "turn_id": 1,
      "update": {
        "first_index": 1,
        "items": [
          {
            "content": "hi",
            "kind": "user",
            "sent_at_ms": "[sent_at_ms]"
          }
        ]
      }
    }
  },
  {
    "TurnError": {
      "kind": "other",
      "message": "authentication failed: {\"error\":{\"message\":\"invalid api key\",\"type\":\"authentication_error\"}}"
    }
  }
]
