tests/snapshots/scenarios__streaming_concat_across_deltas.snap
---
source: tests/scenarios.rs
expression: out.events
---
[
  "Ready",
  {
    "HistoryUpdated": {
      "turn_id": 1,
      "update": {
        "first_index": 1,
        "items": [
          {
            "content": "hi",
            "kind": "user",
            "sent_at_ms": "[sent_at_ms]"
          }
        ]
      }
    }
  },
  {
    "TextDelta": {
      "delta": "hel"
    }
  },
  {
    "TextDelta": {
      "delta": "lo wor"
    }
  },
  {
    "TextDelta": {
      "delta": "ld"
    }
  },
  {
    "TokenUsage": {
      "background": false,
      "cost_usd": null,
      "tokens_per_sec": "[tps]",
      "usage": {
        "completion_tokens": 2,
        "context_tokens": 6,
        "prompt_tokens": 4
      }
    }
  },
  {
    "HistoryAppended": {
      "delta": {
        "first_index": 2,
        "items": [
          {
            "content": "hello world",
            "kind": "assistant"
          }
        ]
      },
      "turn_id": 1
    }
  },
  {
    "TurnComplete": {
      "meta": {
        "avg_tps": "[avg_tps]",
        "elapsed_ms": "[elapsed_ms]",
        "interrupted": false
      },
      "turn_id": 1
    }
  }
]
