tests/snapshots/scenarios__thinking_then_text.snap
---
source: tests/scenarios.rs
expression: out.events
---
[
  "Ready",
  {
    "HistoryUpdated": {
      "turn_id": 1,
      "update": {
        "first_index": 1,
        "items": [
          {
            "content": "solve it",
            "kind": "user",
            "sent_at_ms": "[sent_at_ms]"
          }
        ]
      }
    }
  },
  {
    "ReasoningPartStarted": {
      "id": "0:raw:0",
      "kind": "raw"
    }
  },
  {
    "ReasoningPartDelta": {
      "delta": "let me think",
      "id": "0:raw:0",
      "kind": "raw",
      "title": null
    }
  },
  {
    "ReasoningPartFinished": {
      "content": "let me think",
      "id": "0:raw:0",
      "kind": "raw",
      "title": null
    }
  },
  {
    "TextDelta": {
      "delta": "answer"
    }
  },
  {
    "TokenUsage": {
      "background": false,
      "cost_usd": null,
      "tokens_per_sec": "[tps]",
      "usage": {
        "completion_tokens": 3,
        "context_tokens": 8,
        "prompt_tokens": 5
      }
    }
  },
  {
    "HistoryAppended": {
      "delta": {
        "first_index": 2,
        "items": [
          {
            "content": "answer",
            "kind": "assistant",
            "reasoning": "let me think",
            "reasoning_blocks": [
              {
                "data": {
                  "thinking": "let me think",
                  "type": "thinking"
                },
                "provider": "anthropic"
              }
            ]
          }
        ]
      },
      "turn_id": 1
    }
  },
  {
    "TurnComplete": {
      "meta": {
        "avg_tps": "[avg_tps]",
        "elapsed_ms": "[elapsed_ms]",
        "interrupted": false
      },
      "turn_id": 1
    }
  }
]
